@@ -1,6 +1,6 @@
 [ ABOUT ]
 
-tintwizard 0.2.7 (17th September 2009)
+tintwizard 0.2.8 (20th September 2009)
 
 Thank you for downloading tintwizard!
 
@@ -11,7 +11,7 @@ See http://code.google.com/p/tintwizard/wiki/Help for help
 Please report any problems by posting a bug report at 
 http://code.google.com/p/tintwizard/issues/entry
 
-This version of tintwizard is optimized for revision 179 of tint2.
+This version of tintwizard is optimized for revision 187 of tint2.
 
 [ HOW-TO ]
 
